syntax = "proto3";

package executors.v1.plan.v1;

import "executors/v1/plan/v1/plan_type.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

// PlanRef contains the information needed to access a plan
message PlanRef {
  string bucket = 1 [
    (validate.rules).string.min_len = 1,
    (tagger.tags) = "faker:\"len=10\""
  ];

  string bucket_key = 2 [(validate.rules).string.min_bytes = 1];

  string bucket_assume_role_arn = 3 [
    (validate.rules).string.min_len = 20,
    (tagger.tags) = "faker:\"len=25\""
  ];

  PlanType type = 4;
}
